# beast_rest_api_simple_lib

./: .gitignore  CMakeLists.txt  README.md
include/: dependencies.hpp  routes.hpp  server.hpp  variables.hpp.in
include/HTTP/: handleRequest.hpp  session.hpp
include/requestHandlers/: errorCodes.hpp  handleRequest.hpp
include/routes/: users.hpp
include/server/: route.hpp  server.hpp
include/server/HTTP/: listener.hpp
include/server/requestHandlers/: errorCodes.hpp  handleRequest.hpp
include/server/response/: response.hpp
include/server/responseCreator/: responseCreator.hpp
include/server/route/: route.hpp
include/server/utility/: utilityFunctions.hpp
include/utility/: utilityFunctions.hpp
simple_server/: net_handler.hpp  server.hpp
simple_server/server/HTTP/: listener.hpp  session.hpp
simple_server/server/handleRequest/: errorResponse.hpp  error_response.hpp  handleRequest.hpp  handle_request.hpp  handle_route.hpp  responseCreator.hpp  response_creator.hpp
simple_server/server/request/: request.hpp
simple_server/server/requestHandlers/: errorCodes.hpp  handleRequest.hpp
simple_server/server/response/: response.hpp
simple_server/server/responseCreator/: responseCreator.hpp
simple_server/server/route/: root_route.hpp  route.hpp  route_handler.hpp  routes_container.hpp
simple_server/server/sharedData/: error_code.hpp  lib_core_dependencies.hpp  sharedData.hpp  sharedFunctions.hpp  using_declarations.hpp
simple_server/server/utility/: request_utility_funcs.hpp  response_utility_funcs.hpp  utilityFunctions.hpp
src/: main.cxx
src/routes/: users.cxx
src/utility/: utilityFunctions.cxx
